parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> WORD SYMBOL SYMBOL
Rule 10    command -> WRITE SYMBOL NUMBER NUMBER NUMBER
Rule 11    command -> WRITE SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 12    command -> WRITECENTERED SYMBOL
Rule 13    command -> WRITECENTERED SYMBOL SYMBOL
Rule 14    command -> WRITECENTERED SYMBOL NUMBER NUMBER
Rule 15    command -> WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER
Rule 16    command -> WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER SYMBOL
Rule 17    command -> DELAY NUMBER
Rule 18    command -> DCOLOR SYMBOL
Rule 19    command -> COLOR SYMBOL NUMBER NUMBER NUMBER
Rule 20    command -> DCOLOR_GRADIENT SYMBOL SYMBOL NUMBER NUMBER
Rule 21    command -> STEP_THREE_D NUMBER
Rule 22    command -> POP
Rule 23    command -> PUSH
Rule 24    command -> SCREEN NUMBER NUMBER
Rule 25    command -> SCREEN
Rule 26    command -> SAVE TEXT TEXT
Rule 27    command -> DISPLAY
Rule 28    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 29    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 32    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 33    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 34    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 35    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 36    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 37    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 38    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 39    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 40    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 41    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 42    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 43    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 44    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 45    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 46    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 47    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 48    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 49    command -> MOVE NUMBER NUMBER NUMBER
Rule 50    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 51    command -> SCALE NUMBER NUMBER NUMBER
Rule 52    command -> ROTATE XYZ NUMBER SYMBOL
Rule 53    command -> ROTATE XYZ NUMBER
Rule 54    command -> FRAMES NUMBER
Rule 55    command -> BASENAME TEXT
Rule 56    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 57    command -> SET SYMBOL NUMBER
Rule 58    command -> SET_KNOBS NUMBER
Rule 59    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 60    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 61    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 62    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 63    command -> SHADING SHADING_TYPE
Rule 64    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 65    command -> GENERATE_RAYFILES
Rule 66    command -> MESH CO TEXT
Rule 67    command -> MESH SYMBOL CO TEXT
Rule 68    command -> MESH CO TEXT SYMBOL
Rule 69    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 70    command -> SAVE_KNOBS SYMBOL
Rule 71    command -> SAVE_COORDS SYMBOL
Rule 72    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 73    command -> FOCAL NUMBER
Rule 74    command -> WEB
Rule 75    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 59
BASENAME             : 55
BOX                  : 36 37 38 39
CAMERA               : 64
CO                   : 66 67 68 69
COLOR                : 19
COMMENT              : 3
CONSTANTS            : 60 61
DCOLOR               : 18
DCOLOR_GRADIENT      : 20
DELAY                : 17
DISPLAY              : 27
DOUBLE               : 8
FOCAL                : 73
FRAMES               : 54
GENERATE_RAYFILES    : 65
ID                   : 5
INT                  : 
LIGHT                : 62
LINE                 : 40 41 42 43 44 45 46 47
MESH                 : 66 67 68 69
MOVE                 : 48 49
POP                  : 22
PUSH                 : 23
ROTATE               : 52 53
SAVE                 : 26
SAVE_COORDS          : 71
SAVE_KNOBS           : 70
SCALE                : 50 51
SCREEN               : 24 25
SET                  : 57
SET_KNOBS            : 58
SHADING              : 63
SHADING_TYPE         : 63
SPHERE               : 28 29 30 31
STEP_THREE_D         : 21
STRING               : 7
TEXTURE              : 75
TORUS                : 32 33 34 35
TWEEN                : 72
VARY                 : 56
WEB                  : 74
WORD                 : 9
WRITE                : 10 11
WRITECENTERED        : 12 13 14 15 16
XYZ                  : 4 52 53
error                : 

Nonterminals, with rules where they appear

NUMBER               : 10 10 10 11 11 11 14 14 15 15 16 16 17 19 19 19 20 20 21 24 24 28 28 28 28 29 29 29 29 30 30 30 30 31 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 40 40 40 41 41 41 41 41 41 42 42 42 42 42 42 43 43 43 43 43 43 44 44 44 44 44 44 45 45 45 45 45 45 46 46 46 46 46 46 47 47 47 47 47 47 48 48 48 49 49 49 50 50 50 51 51 51 52 53 54 56 56 56 56 57 58 59 59 59 60 60 60 60 60 60 60 60 60 61 61 61 61 61 61 61 61 61 61 61 61 62 62 62 62 62 62 64 64 64 64 64 64 72 72 73 75 75 75 75 75 75 75 75 75 75 75 75
SYMBOL               : 6 9 9 10 11 11 12 13 13 14 15 15 16 16 16 18 19 20 20 29 30 31 31 33 34 35 35 37 38 39 39 41 42 43 43 44 45 45 46 46 47 47 47 48 50 52 56 57 60 61 62 67 68 69 69 70 71 72 72 75
TEXT                 : 26 26 55 66 67 68 69
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . WORD SYMBOL SYMBOL
    (10) command -> . WRITE SYMBOL NUMBER NUMBER NUMBER
    (11) command -> . WRITE SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (12) command -> . WRITECENTERED SYMBOL
    (13) command -> . WRITECENTERED SYMBOL SYMBOL
    (14) command -> . WRITECENTERED SYMBOL NUMBER NUMBER
    (15) command -> . WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER
    (16) command -> . WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER SYMBOL
    (17) command -> . DELAY NUMBER
    (18) command -> . DCOLOR SYMBOL
    (19) command -> . COLOR SYMBOL NUMBER NUMBER NUMBER
    (20) command -> . DCOLOR_GRADIENT SYMBOL SYMBOL NUMBER NUMBER
    (21) command -> . STEP_THREE_D NUMBER
    (22) command -> . POP
    (23) command -> . PUSH
    (24) command -> . SCREEN NUMBER NUMBER
    (25) command -> . SCREEN
    (26) command -> . SAVE TEXT TEXT
    (27) command -> . DISPLAY
    (28) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (29) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (30) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (32) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (33) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (34) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (35) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (37) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (41) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (42) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (43) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (44) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (45) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (46) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (47) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (48) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (49) command -> . MOVE NUMBER NUMBER NUMBER
    (50) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (51) command -> . SCALE NUMBER NUMBER NUMBER
    (52) command -> . ROTATE XYZ NUMBER SYMBOL
    (53) command -> . ROTATE XYZ NUMBER
    (54) command -> . FRAMES NUMBER
    (55) command -> . BASENAME TEXT
    (56) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (57) command -> . SET SYMBOL NUMBER
    (58) command -> . SET_KNOBS NUMBER
    (59) command -> . AMBIENT NUMBER NUMBER NUMBER
    (60) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (61) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (62) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (63) command -> . SHADING SHADING_TYPE
    (64) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (65) command -> . GENERATE_RAYFILES
    (66) command -> . MESH CO TEXT
    (67) command -> . MESH SYMBOL CO TEXT
    (68) command -> . MESH CO TEXT SYMBOL
    (69) command -> . MESH SYMBOL CO TEXT SYMBOL
    (70) command -> . SAVE_KNOBS SYMBOL
    (71) command -> . SAVE_COORDS SYMBOL
    (72) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (73) command -> . FOCAL NUMBER
    (74) command -> . WEB
    (75) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    WORD            shift and go to state 4
    WRITE           shift and go to state 5
    WRITECENTERED   shift and go to state 6
    DELAY           shift and go to state 7
    DCOLOR          shift and go to state 8
    COLOR           shift and go to state 9
    DCOLOR_GRADIENT shift and go to state 10
    STEP_THREE_D    shift and go to state 11
    POP             shift and go to state 12
    PUSH            shift and go to state 13
    SCREEN          shift and go to state 14
    SAVE            shift and go to state 15
    DISPLAY         shift and go to state 16
    SPHERE          shift and go to state 17
    TORUS           shift and go to state 18
    BOX             shift and go to state 19
    LINE            shift and go to state 20
    MOVE            shift and go to state 21
    SCALE           shift and go to state 22
    ROTATE          shift and go to state 23
    FRAMES          shift and go to state 24
    BASENAME        shift and go to state 25
    VARY            shift and go to state 26
    SET             shift and go to state 27
    SET_KNOBS       shift and go to state 28
    AMBIENT         shift and go to state 29
    CONSTANTS       shift and go to state 30
    LIGHT           shift and go to state 31
    SHADING         shift and go to state 32
    CAMERA          shift and go to state 33
    GENERATE_RAYFILES shift and go to state 34
    MESH            shift and go to state 35
    SAVE_KNOBS      shift and go to state 36
    SAVE_COORDS     shift and go to state 37
    TWEEN           shift and go to state 38
    FOCAL           shift and go to state 39
    WEB             shift and go to state 40
    TEXTURE         shift and go to state 41

    input                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (2) input -> command . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . WORD SYMBOL SYMBOL
    (10) command -> . WRITE SYMBOL NUMBER NUMBER NUMBER
    (11) command -> . WRITE SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (12) command -> . WRITECENTERED SYMBOL
    (13) command -> . WRITECENTERED SYMBOL SYMBOL
    (14) command -> . WRITECENTERED SYMBOL NUMBER NUMBER
    (15) command -> . WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER
    (16) command -> . WRITECENTERED SYMBOL SYMBOL NUMBER NUMBER SYMBOL
    (17) command -> . DELAY NUMBER
    (18) command -> . DCOLOR SYMBOL
    (19) command -> . COLOR SYMBOL NUMBER NUMBER NUMBER
    (20) command -> . DCOLOR_GRADIENT SYMBOL SYMBOL NUMBER NUMBER
    (21) command -> . STEP_THREE_D NUMBER
    (22) command -> . POP
    (23) command -> . PUSH
    (24) command -> . SCREEN NUMBER NUMBER
    (25) command -> . SCREEN
    (26) command -> . SAVE TEXT TEXT
    (27) command -> . DISPLAY
    (28) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (29) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (30) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (32) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (33) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (34) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (35) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (36) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (37) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (38) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (39) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (41) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (42) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (43) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (44) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (45) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (46) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (47) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (48) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (49) command -> . MOVE NUMBER NUMBER NUMBER
    (50) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (51) command -> . SCALE NUMBER NUMBER NUMBER
    (52) command -> . ROTATE XYZ NUMBER SYMBOL
    (53) command -> . ROTATE XYZ NUMBER
    (54) command -> . FRAMES NUMBER
    (55) command -> . BASENAME TEXT
    (56) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (57) command -> . SET SYMBOL NUMBER
    (58) command -> . SET_KNOBS NUMBER
    (59) command -> . AMBIENT NUMBER NUMBER NUMBER
    (60) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (61) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (62) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (63) command -> . SHADING SHADING_TYPE
    (64) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (65) command -> . GENERATE_RAYFILES
    (66) command -> . MESH CO TEXT
    (67) command -> . MESH SYMBOL CO TEXT
    (68) command -> . MESH CO TEXT SYMBOL
    (69) command -> . MESH SYMBOL CO TEXT SYMBOL
    (70) command -> . SAVE_KNOBS SYMBOL
    (71) command -> . SAVE_COORDS SYMBOL
    (72) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (73) command -> . FOCAL NUMBER
    (74) command -> . WEB
    (75) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    WORD            shift and go to state 4
    WRITE           shift and go to state 5
    WRITECENTERED   shift and go to state 6
    DELAY           shift and go to state 7
    DCOLOR          shift and go to state 8
    COLOR           shift and go to state 9
    DCOLOR_GRADIENT shift and go to state 10
    STEP_THREE_D    shift and go to state 11
    POP             shift and go to state 12
    PUSH            shift and go to state 13
    SCREEN          shift and go to state 14
    SAVE            shift and go to state 15
    DISPLAY         shift and go to state 16
    SPHERE          shift and go to state 17
    TORUS           shift and go to state 18
    BOX             shift and go to state 19
    LINE            shift and go to state 20
    MOVE            shift and go to state 21
    SCALE           shift and go to state 22
    ROTATE          shift and go to state 23
    FRAMES          shift and go to state 24
    BASENAME        shift and go to state 25
    VARY            shift and go to state 26
    SET             shift and go to state 27
    SET_KNOBS       shift and go to state 28
    AMBIENT         shift and go to state 29
    CONSTANTS       shift and go to state 30
    LIGHT           shift and go to state 31
    SHADING         shift and go to state 32
    CAMERA          shift and go to state 33
    GENERATE_RAYFILES shift and go to state 34
    MESH            shift and go to state 35
    SAVE_KNOBS      shift and go to state 36
    SAVE_COORDS     shift and go to state 37
    TWEEN           shift and go to state 38
    FOCAL           shift and go to state 39
    WEB             shift and go to state 40
    TEXTURE         shift and go to state 41

    command                        shift and go to state 2
    input                          shift and go to state 42

state 3

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    WORD            reduce using rule 3 (command -> COMMENT .)
    WRITE           reduce using rule 3 (command -> COMMENT .)
    WRITECENTERED   reduce using rule 3 (command -> COMMENT .)
    DELAY           reduce using rule 3 (command -> COMMENT .)
    DCOLOR          reduce using rule 3 (command -> COMMENT .)
    COLOR           reduce using rule 3 (command -> COMMENT .)
    DCOLOR_GRADIENT reduce using rule 3 (command -> COMMENT .)
    STEP_THREE_D    reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 4

    (9) command -> WORD . SYMBOL SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 43

state 5

    (10) command -> WRITE . SYMBOL NUMBER NUMBER NUMBER
    (11) command -> WRITE . SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 46

state 6

    (12) command -> WRITECENTERED . SYMBOL
    (13) command -> WRITECENTERED . SYMBOL SYMBOL
    (14) command -> WRITECENTERED . SYMBOL NUMBER NUMBER
    (15) command -> WRITECENTERED . SYMBOL SYMBOL NUMBER NUMBER
    (16) command -> WRITECENTERED . SYMBOL SYMBOL NUMBER NUMBER SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 47

state 7

    (17) command -> DELAY . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 49

    NUMBER                         shift and go to state 48

state 8

    (18) command -> DCOLOR . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 50

state 9

    (19) command -> COLOR . SYMBOL NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 51

state 10

    (20) command -> DCOLOR_GRADIENT . SYMBOL SYMBOL NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 44
    ID              shift and go to state 45

    SYMBOL                         shift and go to state 52

state 11

    (21) command -> STEP_THREE_D . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 49

    NUMBER                         shift and go to state 53

state 12

    (22) command -> POP .

    COMMENT         reduce using rule 22 (command -> POP .)
    WORD            reduce using rule 22 (command -> POP .)
    WRITE           reduce using rule 22 (command -> POP .)
    WRITECENTERED   reduce using rule 22 (command -> POP .)
    DELAY           reduce using rule 22 (command -> POP .)
    DCOLOR          reduce using rule 22 (command -> POP .)
    COLOR           reduce using rule 22 (command -> POP .)
    DCOLOR_GRADIENT reduce using rule 22 (command -> POP .)
    STEP_THREE_D    reduce using rule 22 (command -> POP .)
    POP             reduce using rule 22 (command -> POP .)
    PUSH            reduce using rule 22 (command -> POP .)
    SCREEN          reduce using rule 22 (command -> POP .)
    SAVE            reduce using rule 22 (command -> POP .)
    DISPLAY         reduce using rule 22 (command -> POP .)
    SPHERE          reduce using rule 22 (command -> POP .)
    TORUS           reduce using rule 22 (command -> POP .)
    BOX             reduce using rule 22 (command -> POP .)
    LINE            reduce using rule 22 (command -> POP .)
    MOVE            reduce using rule 22 (command -> POP .)
    SCALE           reduce using rule 22 (command -> POP .)
    ROTATE          reduce using rule 22 (command -> POP .)
    FRAMES          reduce using rule 22 (command -> POP .)
    BASENAME        reduce using rule 22 (command -> POP .)
    VARY            reduce using rule 22 (command -> POP .)
    SET             reduce using rule 22 (command -> POP .)
    SET_KNOBS       reduce using rule 22 (command -> POP .)
    AMBIENT         reduce using rule 22 (command -> POP .)
    CONSTANTS       reduce using rule 22 (command -> POP .)
    LIGHT           reduce using rule 22 (command -> POP .)
    SHADING         reduce using rule 22 (command -> POP .)
    CAMERA          reduce using rule 22 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 22 (command -> POP .)
    MESH            reduce using rule 22 (command -> POP .)
    SAVE_KNOBS      reduce using rule 22 (command -> POP .)
    SAVE_COORDS     reduce using rule 22 (command -> POP .)
    TWEEN           reduce using rule 22 (command -> POP .)
    FOCAL           reduce using rule 22 (command -> POP .)
    WEB             reduce using rule 22 (command -> POP .)
    TEXTURE         reduce using rule 22 (command -> POP .)
    $end            reduce using rule 22 (command -> POP .)


state 13

    (23) command -> PUSH .

    COMMENT         reduce using rule 23 (command -> PUSH .)
    WORD            reduce using rule 23 (command -> PUSH .)
    WRITE           reduce using rule 23 (command -> PUSH .)
    WRITECENTERED   reduce using rule 23 (command -> PUSH .)
    DELAY           reduce using rule 23 (command -> PUSH .)
    DCOLOR          reduce using rule 23 (command -> PUSH .)
    COLOR           reduce using rule 23 (command -> PUSH .)
    DCOLOR_GRADIENT reduce using rule 23 (command -> PUSH .)
    STEP_THREE_D    reduce using rule 23 (command -> PUSH .)
    POP             reduce using rule 23 (command -> PUSH .)
    PUSH            reduce using rule 23 (command -> PUSH .)
    SCREEN          reduce using rule 23 (command -> PUSH .)
    SAVE            reduce using rule 23 (command -> PUSH .)
    DISPLAY         reduce using rule 23 (command -> PUSH .)
    SPHERE          reduce using rule 23 (command -> PUSH .)
    TORUS           reduce using rule 23 (command -> PUSH .)
    BOX             reduce using rule 23 (command -> PUSH .)
    LINE            reduce using rule 23 (command -> PUSH .)
    MOVE            reduce using rule 23 (command -> PUSH .)
    SCALE           reduce using rule 23 (command -> PUSH .)
    ROTATE          reduce using rule 23 (command -> PUSH .)
    FRAMES          reduce using rule 23 (command -> PUSH .)
    BASENAME        reduce using rule 23 (command -> PUSH .)
    VARY            reduce using rule 23 (command -> PUSH .)
    SET             reduce using rule 23 (command -> PUSH .)
    SET_KNOBS       reduce using rule 23 (command -> PUSH .)
    AMBIENT         reduce using rule 23 (command -> PUSH .)
    CONSTANTS       reduce using rule 23 (command -> PUSH .)
    LIGHT           reduce using rule 23 (command -> PUSH .)
    SHADING         reduce using rule 23 (command -> PUSH .)
    CAMERA          reduce using rule 23 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 23 (command -> PUSH .)
    MESH            reduce using rule 23 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 23 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 23 (command -> PUSH .)
    TWEEN           reduce using rule 23 (command -> PUSH .)
    FOCAL           reduce using rule 23 (command -> PUSH .)
    WEB             reduce using rule 23 (command -> PUSH .)
    TEXTURE         reduce using rule 23 (command -> PUSH .)
    $end            reduce using rule 23 (command -> PUSH .)


state 14

    (24) command -> SCREEN . NUMBER NUMBER
    (25) command -> SCREEN .
    (8) NUMBER -> . DOUBLE
